Publish new API proposal.
