# api/openapi-spec/openapi.yaml
@@ -14,9 +14,9 @@ paths:
     get:
       summary: Return all experiments
       operationId: listExperiments
-      description: List experiments returns all available experiments and their variations.
+      description: List experiments returns all available experiment definitions for this environment.
       tags:
-        - experiments
+        - config
       responses:
         '200':
           description: Valid response
@@ -30,13 +30,13 @@ paths:
           $ref: '#/components/responses/Forbidden'
   /experiments/{experimentKey}:
     parameters:
-    - $ref: '#/components/parameters/experimentKeyParam'
+      - $ref: '#/components/parameters/experimentKeyParam'
     get:
       summary: Return variation for a given user and experiment
       operationId: getExperiment
-      description: Get experiment returns the corresponding experiment for the given experimentKey.
+      description: Get experiment returns the corresponding experiment definition for the given experiment key.
       tags:
-        - experiments
+        - config
       responses:
         '200':
           description: Valid response
@@ -52,9 +52,9 @@ paths:
     get:
       summary: Return all features
       operationId: listFeatures
-      description: List features returns all available features and their variations.
+      description: List features returns all available features definitions for this environment.
       tags:
-        - features
+        - config
       responses:
         '200':
           description: Valid response
@@ -69,13 +69,13 @@ paths:
           $ref: '#/components/responses/Forbidden'
   /features/{featureKey}:
     parameters:
-    - $ref: '#/components/parameters/featureKeyParam'
+      - $ref: '#/components/parameters/featureKeyParam'
     get:
       summary: Return the feature
       operationId: getFeature
-      description: Get feature returns the corresponding feature for the given featureKey.
+      description: Get feature returns the corresponding feature definition for the given feature key.
       tags:
-        - features
+        - config
       responses:
         '200':
           description: Valid response
@@ -87,18 +87,30 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           description: Experiment does not exist
-  /users/{userId}/events/{eventKey}:
+  /revision:
+    get:
+      summary: Return the SDK revision
+      operationId: getRevision
+      description: Get revision returns the revision for this environment.
+      tags:
+        - config
+      responses:
+        '200':
+          description: Valid response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Revision'
+  /track/{eventKey}:
     parameters:
-    - $ref: '#/components/parameters/userIdParam'
-    - $ref: '#/components/parameters/eventKeyParam'
-    - $ref: '#/components/parameters/attributesParam'
+      - $ref: '#/components/parameters/eventKeyParam'
     post:
       summary: Track event for the given user.
       operationId: trackEvent
-      description: Posting and event sends user and event details to Optimizely’s analytics backend for the analysis of
-                   a feature test or a/b test.
+      description: Track sends event and user details to Optimizely’s analytics backend for the analysis of
+        a feature test or a/b test.
       tags:
-        - users
+        - decision
       responses:
         '204':
           description: No content, user not included in the experiment
@@ -107,65 +119,20 @@ paths:
         '404':
           description: Event does not exist
       requestBody:
-        $ref: '#/components/requestBodies/EventTags'
-  /users/{userId}/experiments/{experimentKey}:
+        $ref: '#/components/requestBodies/TrackContext'
+  /decide:
     parameters:
-    - $ref: '#/components/parameters/userIdParam'
-    - $ref: '#/components/parameters/experimentKeyParam'
-    - $ref: '#/components/parameters/attributesParam'
-    get:
-      summary: Return variation decision for an experiment
-      operationId: getVariation
-      description: Read the experiment decision for the supplied user ID and experiment key. Experiment variations do
-                   not have variables so the response simply contains the variation key and id.
-      tags:
-        - users
-      responses:
-        '200':
-          description: Valid response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Variation'
-        '204':
-          description: No content, user not included in the experiment
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          description: Experiment does not exist
+      - $ref: '#/components/parameters/trackParam'
+      - $ref: '#/components/parameters/filterParam'
     post:
-      summary: Activate experiment and return variation
-      operationId: activateExperiment
-      description: Read the experiment decision for the supplied user ID and experiment key. Experiment variations do
-                   not have variables so the response simply contains the variation key and id. This method will send a
-                   tracking impression event to the Optimizely analytics backend for experiment reporting.
+      summary: Determine the state of ALL features and experiments for the given user.
+      operationId: decide
+      description: Decide iterates over all features and experiments and returns the decision
+        for the given user. All features are included regardless of whether the feature is enabled.
+        An impression event will sent to the Optimizely analytics backend for any decision made for
+        and experiment or feature test.
       tags:
-        - users
-      responses:
-        '200':
-          description: Valid response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Variation'
-        '204':
-          description: No content, user not included in the experiment
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          description: Experiment does not exist
-  /users/{userId}/features:
-    parameters:
-      - $ref: '#/components/parameters/userIdParam'
-      - $ref: '#/components/parameters/attributesParam'
-    get:
-      summary: Return ALL features resulting from an experiment or rollout
-      operationId: listFeatureDecisions
-      description: List feature decisions iterates over all features and returns the feature decisions in the context
-                   of the given user. All features are included regardless of whether the feature is enabled. The
-                   response includes the enabled status of the feature in addition to any configured variables.
-      tags:
-        - users
+        - decision
       responses:
         '200':
           description: Valid response
@@ -174,88 +141,51 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/FeatureDecision'
+                  $ref: '#/components/schemas/Decision'
         '403':
           $ref: '#/components/responses/Forbidden'
-    post:
-      summary: Activate ALL features resulting from an experiment or rollout
-      operationId: activateAllFeatures
-      description: List feature decisions iterates over all features and returns the feature definition in the context
-                   of the given user. All features are included regardless of whether the feature is enabled. The
-                   response includes the enabled status of the feature in addition to any configured variables. Any
-                   feature that is part of a feature test(s) will also send an impression event to the Optimizely
-                   analytics backend for reporting analysis.
-      tags:
-        - users
-      responses:
-        '200':
-          description: Valid response
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/FeatureDecision'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-  /users/{userId}/features/{featureKey}:
+      requestBody:
+        $ref: '#/components/requestBodies/DecisionContext'
+  /decide/{decisionKey}:
     parameters:
-    - $ref: '#/components/parameters/userIdParam'
-    - $ref: '#/components/parameters/featureKeyParam'
-    - $ref: '#/components/parameters/attributesParam'
-    get:
-      summary: Return feature resulting from an experiment or rollout
-      operationId: getFeatureDecision
-      description: Read the feature flag decision for the supplied user ID and experiment key.  The response is
-                   determined by the feature test(s) and/or feature rollout defined for the supplied feature key.
+      - $ref: '#/components/parameters/decisionKeyParam'
+      - $ref: '#/components/parameters/trackParam'
+      - $ref: '#/components/parameters/filterParam'
+    post:
+      summary: Decide on feature or experiment state for a given user and return associated variable values
+      operationId: decideForEntity
+      description: Determine the feature flag or experiment decisions for the supplied user context. If the decision was made
+        as part of an experiment or feature test or an ab experiment, then this API will send an impression event to
+        Optimizely tracking servers.
       tags:
-        - users
+        - decision
       responses:
         '200':
           description: Valid response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FeatureDecision'
+                $ref: '#/components/schemas/Decision'
         '204':
           description: No content, user not included in the experiment
         '403':
           $ref: '#/components/responses/Forbidden'
         '404':
           description: Feature does not exist
-    post:
-      summary: Activate feature and return associated variable values
-      operationId: activateFeature
-      description: Read the feature flag decisions for the supplied user ID. The response value is determined by the
-                   feature test(s) and/or feature rollout defined for the supplied feature key. If the decision was mafe
-                   as part of a feature test, then this API will send an impression event to Optimizely tracking servers.
-      tags:
-        - users
-      responses:
-        '200':
-          description: Valid response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FeatureDecision'
-        '204':
-          description: No content, user not included in the experiment
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          description: Feature does not exist
-  /overrides/users/{userId}/experiments/{experimentKey}:
+      requestBody:
+        $ref: '#/components/requestBodies/DecisionContext'
+  /override/{decisionKey}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
-      - $ref: '#/components/parameters/experimentKeyParam'
+      - $ref: '#/components/parameters/decisionKeyParam'
+      - $ref: '#/components/parameters/variationKeyParam'
     put:
-      summary: Set a forced variation for a user in an experiment
-      operationId: setForcedVariation
-      description: Set forced variation stores the experiment and variation detail to be consumed by future user
+      summary: Override an experiment decision for a user
+      operationId: override
+      description: Override a experiment or feature test decision used in future user
         based decisions. This override is only stored locally and inmemory for debugging and testing purposes
         and should not be used for production overrides.
       tags:
-        - overrides
+        - decision
       responses:
         '201':
           description: Forced variation set
@@ -266,30 +196,16 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
       requestBody:
-        $ref: '#/components/requestBodies/Override'
-    delete:
-      summary: Remove any forced variation for a user in an experiment
-      operationId: deleteForcedVariation
-      description: Delete forced variation removes any stored variation override associated with the user and experiment.
-      tags:
-        - overrides
-      responses:
-        '204':
-          description: Any forced variation was deleted
-        '400':
-          description: Invalid user id or experiment key
-        '403':
-          $ref: '#/components/responses/Forbidden'
+        $ref: '#/components/requestBodies/OverrideContext'
 components:
   parameters:
-    attributesParam:
+    trackParam:
       in: query
-      name: attributes
+      name: track
       required: false
+      description: Setting track to false will disable impression tracking for ab experiments or feature tests.
       schema:
-        type: object
-        additionalProperties:
-          type: string
+        type: boolean
     eventKeyParam:
       in: path
       name: eventKey
@@ -301,44 +217,63 @@ components:
       in: path
       name: experimentKey
       required: true
-      description: Key of the experiment we're activating
+      description: Key of the experiment we're fetching
       schema:
         type: string
     featureKeyParam:
       in: path
       name: featureKey
       required: true
-      description: Key of the feature we're activating
+      description: Key of the feature we're fetching
       schema:
         type: string
-    userIdParam:
-      name: userId
+    filterParam:
+      in: query
+      name: filter
+      required: false
+      description: Limit the decisions to either experiment or features
+      schema:
+        type: string
+        enum:
+          - features
+          - experiments
+    decisionKeyParam:
       in: path
+      name: decisionKey
       required: true
-      description: Id associated with the user
+      description: Decision key can be either a featureKey or experimentKey we're deciding on. If the key is shared by both experiment and feature, the decision for the feature will be made.
       schema:
         type: string
     variationKeyParam:
       name: variationKey
       in: path
       required: true
-      description: Key of the variation we're fetching
+      description: Key of the variation we're overriding
       schema:
         type: string
   requestBodies:
-    EventTags:
-      required: false
-      content:
-        application/json:
-          schema:
-            type: object
-            additionalProperties: true
-    Override:
+    DecisionContext:
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Override'
+            $ref: '#/components/schemas/DecisionContext'
+    OverrideContext:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/OverrideContext'
+            type: object
+            additionalProperties: true
+    TrackContext:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TrackContext'
+            type: object
+            additionalProperties: true
   responses:
     Forbidden:
       description: You do not have necessary permissions for the resource
@@ -363,8 +298,8 @@ components:
             $ref: '#/components/schemas/Variation'
       # Both properties are required
       required:
-      - id
-      - key
+        - id
+        - key
     Feature:
       properties:
         id:
@@ -381,9 +316,9 @@ components:
             $ref: '#/components/schemas/Experiment'
       # Both properties are required
       required:
-      - id
-      - key
-    FeatureDecision:
+        - id
+        - key
+    Decision:
       properties:
         id:
           type: integer
@@ -397,12 +332,33 @@ components:
             type: string
       # Both properties are required
       required:
-      - id
-      - key
-    Override:
+        - id
+        - key
+    DecisionContext:
       properties:
-        variationKey:
+        userId:
           type: string
+        userAttributes:
+          type: object
+          additionalProperties: true
+    OverrideContext:
+      properties:
+        userId:
+          type: string
+    Revision:
+      properties:
+        revision:
+          type: string
+    TrackContext:
+      properties:
+        userId:
+          type: string
+        userAttributes:
+          type: object
+          additionalProperties: true
+        eventTags:
+          type: object
+          additionalProperties: true
     Variation:
       properties:
         id:
@@ -432,19 +388,11 @@ components:
       name: X-Optimizely-SDK-Key
       type: apiKey
 tags:
-  - name: experiments
-    description: Collection of APIs to describe the Optimizely Experiment set.
+  - name: decision
+    description: Collection of APIs to make experiment, rollout and feature flagging decisions.
     externalDocs:
       url: https://docs.developers.optimizely.com/full-stack/docs/welcome
-  - name: features
-    description: Collection of APIs to describe the Optimizely Feature set.
-    externalDocs:
-      url: https://docs.developers.optimizely.com/full-stack/docs/welcome
-  - name: users
-    description: Collection of APIs to make decisions given the context of a specified user.
-    externalDocs:
-      url: https://docs.developers.optimizely.com/full-stack/docs/welcome
-  - name: overrides
-    description: Collection of APIs used to override the default decision logic.
+  - name: config
+    description: Collection of APIs to describe the active Optimizely Configuration.
     externalDocs:
       url: https://docs.developers.optimizely.com/full-stack/docs/welcome
